--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -14,6 +14,31 @@ body {
     }
 }
 
+.my-4 {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
+  font-style: italic;
+}
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.embed-responsive {
+  position: relative;
+  display: block;
+  width: 20%;
+  padding: 0;
+  overflow: hidden;
+}
+
 .carousel-item {
     height: 65vh;
     min-height: 300px;
@@ -22,6 +47,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
 }
 
 .portfolio-item {
